# MRJD_SCF

./: CMakeLists.txt  README.md  main.cpp  molecule.cc  molecule.h  water  water.cc
IUPAC_Atomic_mass/: Atomic_weight.csv  Atomic_weight_num.csv
Project1_Geometries/: Acetaldehyd.xyz
Project1_water/: water
Project2_Geom/: Hessian_explanation.md  Hessian_explanation.md.bak  main_Proj2.cpp  water.xyz
include/: CMakeLists.txt  molecule.cc  molecule.h  molecule.hpp
